--- a/index.html
+++ b/index.html
@@ -85,15 +85,6 @@
 		
 	<br>
 	
-	
-	<h2 style="color: #808082;"> <center>
-	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
-		</center> </h2>
-	<br>
-	<br>
-	<br>
-	
-
 	</div>
 
 				<!-- Skills Section --> <!--  color block #3  -->
@@ -113,7 +104,7 @@
 		<img src="detailed.jpg" style="width: 350px; height: 150px" hspace="30" alt="detailed">
 -->
 		<h2 style="color: #808082;"> <center>
-	Liberty University Class of 2022. <br><em>Computer Science: Cyber Security & Mathematics major.</em>
+	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		</center> </h2><br><br><br>
 	
 </div>	
