--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 	<br><br>
 	<center>
 	<a href="#top" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">About Me</a> 
-	<a href="#skills" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">Skills</a> 
-	<a href="#tools" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">Tools</a> 
+	<a href="#skillstools" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">Skills & Tools</a> 
 	<a href="#experience" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">Experience</a>
 	<a href="#interests" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">Interests</a>
 	<a href="#projects" style="font-size:12pt; color:white; text-decoration:none; padding-right: 60px;">Projects</a> 
@@ -73,7 +72,7 @@
 		
 		<!-- header text -->
 
-	<div class="text" style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
+	<div class="text" style="margin-top: 5px; margin-left: 200px; margin-right: 0px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
 		<h4 style="color: #808082;"><strong> I'M JAMIE! </strong></h4>
 		<p style="color: #808082;"> 
 			<em> It's nice to meet you!</em> <br><br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
@@ -87,33 +86,20 @@
 	
 	</div>
 
-				<!-- Skills Section --> <!--  color block #3  -->
+				<!-- Header : Part Two --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-	<!-- <h2 id="skills"> <center> <strong> SKILLS </strong> <center> </h2>
-		<br><br><br>
-	<center>
-		<img src="discover.jpg" style="width: 350px; height: 150px border: 5px gray;" hspace="30" alt="discover">
-		<img src="leadership.jpg" style="width: 350px; height: 150px" hspace="30" alt="leadership">
-			<br>
-		<img src="integrity.jpg" style="width: 350px; height: 150px" hspace="30" alt="integrity">
-			<br>
-		<img src="engineer.jpg" style="width: 350px; height: 150px" hspace="30" alt="engineer">
-		<img src="creativity.jpg" style="width: 350px; height: 150px" hspace="30" alt="creativity">
-			<br>
-		<img src="detailed.jpg" style="width: 350px; height: 150px" hspace="30" alt="detailed">
--->
 		<h2 style="color: #808082;"> <center>
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		</center> </h2><br><br><br>
 	
 </div>	
 	
-				<!-- Tools Section --> <!--  color block #4  -->
+				<!-- Skills & Tools Section --> <!--  color block #4  -->
 	  
 	
 <div  style="padding: 50px; background-color:#F4CCBD;">
-	<h2 id="tools"> <center> <strong> TOOLS </strong> <center> </h2>
+	<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 		
 	<center>
 		<br><br><br>
