--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		
 		<!-- header text -->
 
-	<div class="text" style="margin-top: 5px; margin-left: 200px; margin-right: 0px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
+	<div class="text" style="margin-top: 5px; margin-left: 200px; margin-right: 100px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
 		<h4 style="color: #808082;"><strong> I'M JAMIE! </strong></h4>
 		<p style="color: #808082;"> 
 			<em> It's nice to meet you!</em> <br><br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
@@ -89,8 +89,8 @@
 				<!-- Header : Part Two --> <!--  color block #3  -->
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
-		<h2 style="color: #808082;"> <center>
-	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
+		<br><br><br><h2 style="color: #808082;"> <center>
+	Liberty University Class of 2022. Bachelors of Science in Computer Science: Cyber Security, in Government: National Security, & in Mathematics. 
 		</center> </h2><br><br><br>
 	
 </div>	
