--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <div  style="padding: 50px; background-color:#FFFFFF;"> 	  
 		<br><br><br><h2 style="color: #808082;"> <center>
-	Liberty University Class of 2022. Bachelors of Science in Computer Science: Cyber Security, in Government: National Security, & in Mathematics. 
+	Liberty University Class of 2022. <br>Bachelors of Science in Computer Science: Cyber Security, in Government: National Security, & in Mathematics. 
 		</center> </h2><br><br><br>
 	
 </div>	
